<resources>
    <string name="app_name">E-Laundry</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="anda_telah_berhasil_login">Anda Telah Berhasil Login</string>
    <string name="silahkan_login">Silahkan Login</string>
    <string name="masukan_username_dan_password_dengan_benar">Masukkan Username dan Password Dengan Benar</string>
    <string name="masukkan_password">Password </string>
    <string name="tampilkan_password">Tampilkan Password</string>
    <string name="login">Login</string>
    <string name="masukkan_username">Username </string>
    <string name="title_activity_home">E-Laundry</string>


    <string name="openDrawer">Drawer dibuka</string>
    <string name="closeDrawer">Drawer ditutup</string>
    <string name="navigation_view_item_1">Beranda</string>
    <string name="navigation_view_item_2">Profil</string>
    <string name="navigation_view_item_3">Daftar</string>
    <string name="navigasi_kategori_2">Sub Item Navigasi</string>
    <string name="navigation_view_item_4">Settings</string>
    <string name="navigation_view_item_5">About</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="tidak_punya_akun_buat_akun">Tidak punya akun? Buat Akun</string>
    <string name="profil">Profil</string>
    <string name="buat_akun">Buat Akun</string>
    <string name="riwayat">Riwayat</string>
    <string name="bantuan">Bantuan</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="android_dropdown_arrays">
        <item>Flamboyan</item>
        <item>Jasmine</item>
        <item>Fresh</item>
    </string-array>

    <string-array name="android_dropdown_arrays2">
        <item>Cuci Kering Setrika</item>
        <item>Cuci Kering</item>
        <item>Setrika Saja</item>
    </string-array>

    <string-array name="android_dropdown_arrays3">
        <item>Cuci 4 Jam</item>
        <item>Cuci 24 Jam</item>
        <item>Cuci 2 Hari</item>
    </string-array>

</resources>
